namespace Soromaps.DTO
{
    public class MarkerDTO
    {
        public string Nome { get; set; }
        public double Lat { get; set; }
        public double Lng { get; set; }
    }
}
