// Modelo proposto do Ponto — cole em https://dbdiagram.io para visualizar.
//
// Status: conceito aprovado pelo time em 2026-08-03, ainda NÃO implementado.
// A tabela `markers` real tem só (id, nome, lat, lng). Ver
// ./2026-08-03-expansao-modelo-ponto.md e docs/wiki/08-banco-atual.md.

Project soromaps {
  database_type: 'PostgreSQL'
  Note: 'Recorte do modelo: só as tabelas tocadas pela expansão do Ponto.'
}

Table markers {
  id            integer      [pk, increment]
  nome          varchar(120) [not null, note: 'Nome do local']
  lat           double       [not null]
  lng           double       [not null]

  foto_url      varchar(500) [note: 'URL da foto; upload/storage é item separado (RF-08)']
  sobre         varchar(160) [note: 'Descrição breve — no TCC era PontoDescricao']
  categoria_id  integer      [ref: > categorias.id, note: 'Categoria/vibe do local']
  tem_wifi      boolean      [not null, default: false]
  pet_friendly  boolean      [not null, default: false]
  melhor_horario varchar(60) [null, note: 'Opcional. Texto livre: "fim de tarde", "evita o almoço"']
  segredo_local varchar(200) [null, note: 'Opcional. A dica que só quem é da cidade sabe']

  created_at    timestamp    [not null, default: `now()`]
  updated_at    timestamp    [not null, default: `now()`]

  Note: '''
  Colunas existentes hoje: id, nome, lat, lng.
  Todas as outras são a proposta.

  Em aberto (não aprovado nesta rodada, ver o .md):
    usuario_dono integer [ref: > tbUsuario.id]
    status       varchar
  '''
}

Table categorias {
  id      integer     [pk, increment]
  nome    varchar(60) [not null, unique, note: 'Cafeteria, Bar, Parque…']
  icone   varchar(40) [note: 'Nome do ícone lucide, para o pin do mapa']
  cor     varchar(9)  [note: 'Hex — o que deixa o mapa legível por tipo']

  Note: 'Tabela nova. Módulo já desenhado em docs/todo/admin/categories.md.'
}

Table tbUsuario {
  id            integer   [pk, increment]
  user_name     varchar
  user_email    varchar
  user_password varchar
  created_at    timestamp
  updated_at    timestamp

  Note: 'Existe hoje. Aparece aqui só para situar a FK usuario_dono, que segue em aberto.'
}
